Squashed commit of the following:
commit 9180e71fa34734f4328ad03f9f836cdccad4f5a0
Author: electric-el <electric-el@electric-eloquence.io>
Date:   Thu Jul 1 14:20:31 2021 -0400

    added e2e tests

commit aaeb6ed1c8932496a4c580fa0f2cf70da7ba49a3
Author: electric-el <electric-el@electric-eloquence.io>
Date:   Thu Jul 1 08:02:55 2021 -0400

    completed unit test coverage

commit 75dd0064442a8ef355276945a0e4b9518dac3472
Author: electric-el <electric-el@electric-eloquence.io>
Date:   Thu Jul 1 05:50:38 2021 -0400

    improved unit tests

commit 4820fbf5ca0f12a4175574bad047fddc5186f14d
Author: electric-el <electric-el@electric-eloquence.io>
Date:   Wed Jun 30 11:29:26 2021 -0400

    more passing tests and coverage

commit 3361fc1ba3c368fdd0083f8b90951140d255c2af
Author: electric-el <electric-el@electric-eloquence.io>
Date:   Tue Jun 29 11:22:42 2021 -0400

    more passing tests and coverage

commit 1cbd97777fda5cf24bb43f00621cd4b05072785a
Author: electric-el <electric-el@electric-eloquence.io>
Date:   Fri Jun 25 17:46:40 2021 -0400

    more unit test coverage

commit d7614ebf12ee3b59fea2421eb60231c64b2f0581
Author: electric-el <electric-el@electric-eloquence.io>
Date:   Fri Jun 25 17:01:04 2021 -0400

    passing existing tests

commit 073c00c24a28a0d190597ff277fde347906139c5
Author: electric-el <electric-el@electric-eloquence.io>
Date:   Fri Jun 25 15:53:57 2021 -0400

    passing existing tests

commit 018311c89e572ea442a8337ed3e3606846601624
Author: electric-el <electric-el@electric-eloquence.io>
Date:   Fri Jun 25 10:42:35 2021 -0400

    full git integration

commit e36df2c7953d458b55bb1537d51424e9e6dd5d99
Author: electric-el <electric-el@electric-eloquence.io>
Date:   Fri Jun 25 08:03:40 2021 -0400

    added git push integration

commit 2eb7a57a948948d914b2e4afa3e6c42d913eb7c6
Author: electric-el <electric-el@electric-eloquence.io>
Date:   Sun Jun 20 08:09:10 2021 -0400

    correctly hiding markdown edit button if git has a conflict

commit 0ab830f50628631a

--- a/test/fixtures/index.html
+++ b/test/fixtures/index.html
@@ -174,7 +174,7 @@
   <li id="sg-code-tab-feplet" class="sg-code-tab sg-code-tab-active" title="Browse Fepper's Mustache templates">Feplet</li>
   <li id="sg-code-tab-markdown" class="sg-code-tab" title="Edit this pattern's Markdown content">Markdown</li>
   <li id="sg-code-tab-git" class="sg-code-tab" title="Download and upload revisions to this project">Git</li>
-  <li id="sg-code-tab-requerio" class="sg-code-tab" title="Time-travel through Fepper's application states">Requerio</li>
+  <li id="sg-code-tab-requerio" class="sg-code-tab" title="Time-travel through this pattern's application states">Requerio</li>
 </ul>
 <div id="sg-code-panels">
   <iframe id="sg-code-panel-feplet" class="sg-code-panel sg-code-panel-active" sandbox="allow-same-origin allow-scripts allow-top-navigation"></iframe>
@@ -188,20 +188,37 @@
       <button id="sg-code-btn-markdown-edit" class="sg-code-btn" title="Edit this pattern's Markdown content">Edit</button>
     </div>
     <div id="sg-code-pane-markdown-edit" class="sg-code-pane">
-      <textarea id="sg-code-textarea-markdown" class="language-markdown" name="markdown_edited"></textarea>
+      <textarea id="sg-code-textarea-markdown" name="markdown_edited"></textarea>
       <button id="sg-code-btn-markdown-save" class="sg-code-btn" title="Save Markdown content">Save</button>
-      <button id="sg-code-btn-markdown-cancel" class="sg-code-btn" title="Cancel Markdown edit">Cancel</button>
+      <button id="sg-code-btn-markdown-save-cancel" class="sg-code-btn" title="Cancel">Cancel</button>
+    </div>
+    <div id="sg-code-pane-markdown-load-anim" class="sg-code-load-anim">
+      <div></div><div></div><div></div><div></div>
+    </div>
+    <div id="sg-code-pane-markdown-commit" class="sg-code-pane">
+      <label id="sg-code-label-commit-message" for="sg-code-textarea-commit-message">Please describe this edit:</label>
+      <textarea id="sg-code-textarea-commit-message" name="commit_message"></textarea>
+      <button id="sg-code-btn-markdown-commit" class="sg-code-btn" title="Commit this revision">Commit</button>
+      <button id="sg-code-btn-markdown-commit-cancel" class="sg-code-btn" title="Cancel">Cancel</button>
+    </div>
+    <div id="sg-code-pane-markdown-console" class="sg-code-pane">
+      <pre id="sg-code-console-markdown-log"></pre>
+      <pre id="sg-code-console-markdown-error"></pre>
+      <button id="sg-code-btn-markdown-continue" class="sg-code-btn" title="Continue">Continue</button>
+      <div id="sg-code-console-markdown-load-anim" class="sg-code-load-anim">
+        <div></div><div></div><div></div><div></div>
+      </div>
     </div>
   </div>
   <div id="sg-code-panel-git" class="sg-code-panel">
-    <div id="sg-code-pane-git-na" class="sg-code-pane" style="display: block;">
-      Git has not been set up for this project.
+    <div id="sg-code-pane-git-na" class="sg-code-pane">
+      <pre>Git has not been set up for this project.</pre>
     </div>
     <div id="sg-code-pane-git" class="sg-code-pane">
-      <form id="sg-code-input-container-git">
-        <legend id="sg-code-input-legend-git">Git integration:</legend>
-        <input id="sg-code-input-git-off" class="sg-code-input-git" name="sg-code-input-git" type="radio" checked><label>OFF</label>
-        <input id="sg-code-input-git-on" class="sg-code-input-git" name="sg-code-input-git" type="radio"><label>ON</label>
+      <form id="sg-code-radio-git">
+        <legend id="sg-code-radio-git-legend">Git Integrator:</legend>
+        <input id="sg-code-radio-git-off" class="sg-code-radio-git" name="sg-code-radio-git" type="radio" checked><label>OFF</label>
+        <input id="sg-code-radio-git-on" class="sg-code-radio-git" name="sg-code-radio-git" type="radio"><label>ON</label>
       </form>
       <p>Fepper's Markdown Editor offers integration with Git.</p>
       <p>By integrating Git, Fepper will automatically pull edits made by other team members each time the Markdown Editor is opened.</p>
@@ -214,6 +231,7 @@
         <li>Restrict editors to their own Git branch, which a developer will merge into a main branch.</li>
       </ul>
     </div>
+    <button id="sg-code-btn-git-disable" class="sg-code-btn" title="Disable Git Integrator">Disable Git</button>
   </div>
   <div id="sg-code-panel-requerio" class="sg-code-panel"></div>
 </div>
