added requerio time-traveler placeholder

--- a/test/fixtures/index.html
+++ b/test/fixtures/index.html
@@ -212,7 +212,7 @@
   </div>
   <div id="sg-code-panel-git" class="sg-code-panel">
     <div id="sg-code-pane-git-na" class="sg-code-pane">
-      <pre>Git has not been set up for this project.</pre>
+      <code>Git has not been set up for this project.</code>
     </div>
     <div id="sg-code-pane-git" class="sg-code-pane">
       <form id="sg-code-radio-git">
@@ -233,7 +233,11 @@
     </div>
     <button id="sg-code-btn-git-disable" class="sg-code-btn" title="Disable Git Integrator">Disable Git</button>
   </div>
-  <div id="sg-code-panel-requerio" class="sg-code-panel"></div>
+  <div id="sg-code-panel-requerio" class="sg-code-panel">
+    <div id="sg-code-pane-requerio-placeholder" class="sg-code-pane" style="display: block;">
+      <code>The Requerio Time-Traveler is a work in progress. Please stay tuned as it comes to life!</code>
+    </div>
+  </div>
 </div>
 </div><div class="sg-view-btns">
 <svg id="sg-view-btn-dock-left" class="sg-view-btn-dock-left sg-view-btn"
