less disruptive navigation in mustache-browser

--- a/test/fixtures/index.html
+++ b/test/fixtures/index.html
@@ -10,7 +10,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<link rel="stylesheet" href="node_modules/fepper-ui/styles/prism-twilight.css">
+<link rel="stylesheet" href="webserved/prism-twilight.css">
 <link rel="stylesheet" href="node_modules/fepper-ui/styles/ui.css">
 <link rel="stylesheet" href="_styles/pattern-scaffolding.css">
 
@@ -196,7 +196,7 @@
       <div></div><div></div><div></div><div></div>
     </div>
     <div id="sg-code-pane-markdown-commit" class="sg-code-pane">
-      <label id="sg-code-label-commit-message" for="sg-code-textarea-commit-message">Please describe this edit:</label>
+      <label id="sg-code-label-commit-message" for="sg-code-textarea-commit-message">Please enter a commit message that describes this edit:</label>
       <textarea id="sg-code-textarea-commit-message" name="commit_message"></textarea>
       <button id="sg-code-btn-markdown-commit" class="sg-code-btn" title="Commit this revision">Commit</button>
       <button id="sg-code-btn-markdown-commit-cancel" class="sg-code-btn" title="Cancel">Cancel</button>
