--- a/patterns/98-scrape-00-html-scraper/98-scrape-00-html-scraper.html
+++ b/patterns/98-scrape-00-html-scraper/98-scrape-00-html-scraper.html
@@ -14,7 +14,7 @@
   <meta http-equiv="pragma" content="no-cache">
 
   <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
-<link rel="stylesheet" href="../../node_modules/fepper-ui/styles/pattern.css">
+<link rel="stylesheet" href="../../webserved/pattern.css">
 <script src="../../node_modules/mousetrap/mousetrap.min.js"></script>
 <script src="../../annotations/annotations.js"></script>
 <!-- End Pattern Lab -->
@@ -24,7 +24,7 @@
   <script src="../../_scripts/src/variables.styl" type="text/javascript"></script>
 </head>
 <body class="">
-<script src="../../node_modules/fepper-ui/scripts/pattern/html-scraper-ajax.js"></script>
+<script src="../../webserved/html-scraper-ajax.js"></script>
 
 <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
 <script type="text/json" id="sg-pattern-data-footer" class="sg-pattern-data">
