renamed data-patternpartial -> data-pattern-partial, dataset.patternpartial -> dataset.patternPartial

--- a/patterns/01-compounds/index.html
+++ b/patterns/01-compounds/index.html
@@ -47,7 +47,7 @@
             <a
               href="../../patterns/01-compounds-block/01-compounds-block.html"
               class="sg-pattern-link"
-              data-patternpartial="compounds-block"
+              data-pattern-partial="compounds-block"
               title="Link to Pattern"
             >Block</a>
           </h4>
@@ -56,14 +56,14 @@
               href="#"
               id="sg-pattern-toggle-annotations-compounds-block"
               class="sg-pattern-info-toggle sg-pattern-toggle-annotations"
-              data-patternpartial="compounds-block"
+              data-pattern-partial="compounds-block"
               title="View Pattern Annotations"
             >&#x1F4C4;</a>
             <a
               href="#"
               id="sg-pattern-toggle-code-compounds-block"
               class="sg-pattern-info-toggle sg-pattern-toggle-code"
-              data-patternpartial="compounds-block"
+              data-pattern-partial="compounds-block"
               title="View Pattern Code"
             >&#x276E;&#x276F;</a>
           </div>
