--- a/patterns/02-components/index.html
+++ b/patterns/02-components/index.html
@@ -47,7 +47,7 @@
             <a
               href="../../patterns/02-components-region/02-components-region.html"
               class="sg-pattern-link"
-              data-patternpartial="components-region"
+              data-pattern-partial="components-region"
               title="Link to Pattern"
             >Region</a>
           </h4>
@@ -56,14 +56,14 @@
               href="#"
               id="sg-pattern-toggle-annotations-components-region"
               class="sg-pattern-info-toggle sg-pattern-toggle-annotations"
-              data-patternpartial="components-region"
+              data-pattern-partial="components-region"
               title="View Pattern Annotations"
             >&#x1F4C4;</a>
             <a
               href="#"
               id="sg-pattern-toggle-code-components-region"
               class="sg-pattern-info-toggle sg-pattern-toggle-code"
-              data-patternpartial="components-region"
+              data-pattern-partial="components-region"
               title="View Pattern Code"
             >&#x276E;&#x276F;</a>
           </div>
