--- a/patterns/04-pages/index.html
+++ b/patterns/04-pages/index.html
@@ -47,7 +47,7 @@
             <a
               href="../../patterns/04-pages-00-homepage/04-pages-00-homepage.html"
               class="sg-pattern-link"
-              data-patternpartial="pages-homepage"
+              data-pattern-partial="pages-homepage"
               title="Link to Pattern"
             >Homepage</a>
           </h4>
@@ -56,14 +56,14 @@
               href="#"
               id="sg-pattern-toggle-annotations-pages-homepage"
               class="sg-pattern-info-toggle sg-pattern-toggle-annotations"
-              data-patternpartial="pages-homepage"
+              data-pattern-partial="pages-homepage"
               title="View Pattern Annotations"
             >&#x1F4C4;</a>
             <a
               href="#"
               id="sg-pattern-toggle-code-pages-homepage"
               class="sg-pattern-info-toggle sg-pattern-toggle-code"
-              data-patternpartial="pages-homepage"
+              data-pattern-partial="pages-homepage"
               title="View Pattern Code"
             >&#x276E;&#x276F;</a>
           </div>
