--- a/patterns/viewall/viewall.html
+++ b/patterns/viewall/viewall.html
@@ -47,7 +47,7 @@
             <a
               href="../../patterns/00-elements-paragraph/00-elements-paragraph.html"
               class="sg-pattern-link"
-              data-patternpartial="elements-paragraph"
+              data-pattern-partial="elements-paragraph"
               title="Link to Pattern"
             >Paragraph</a>
           </h4>
@@ -56,14 +56,14 @@
               href="#"
               id="sg-pattern-toggle-annotations-elements-paragraph"
               class="sg-pattern-info-toggle sg-pattern-toggle-annotations"
-              data-patternpartial="elements-paragraph"
+              data-pattern-partial="elements-paragraph"
               title="View Pattern Annotations"
             >&#x1F4C4;</a>
             <a
               href="#"
               id="sg-pattern-toggle-code-elements-paragraph"
               class="sg-pattern-info-toggle sg-pattern-toggle-code"
-              data-patternpartial="elements-paragraph"
+              data-pattern-partial="elements-paragraph"
               title="View Pattern Code"
             >&#x276E;&#x276F;</a>
           </div>
@@ -90,7 +90,7 @@
             <a
               href="../../patterns/01-compounds-block/01-compounds-block.html"
               class="sg-pattern-link"
-              data-patternpartial="compounds-block"
+              data-pattern-partial="compounds-block"
               title="Link to Pattern"
             >Block</a>
           </h4>
@@ -99,14 +99,14 @@
               href="#"
               id="sg-pattern-toggle-annotations-compounds-block"
               class="sg-pattern-info-toggle sg-pattern-toggle-annotations"
-              data-patternpartial="compounds-block"
+              data-pattern-partial="compounds-block"
               title="View Pattern Annotations"
             >&#x1F4C4;</a>
             <a
               href="#"
               id="sg-pattern-toggle-code-compounds-block"
               class="sg-pattern-info-toggle sg-pattern-toggle-code"
-              data-patternpartial="compounds-block"
+              data-pattern-partial="compounds-block"
               title="View Pattern Code"
             >&#x276E;&#x276F;</a>
           </div>
@@ -133,7 +133,7 @@
             <a
               href="../../patterns/02-components-region/02-components-region.html"
               class="sg-pattern-link"
-              data-patternpartial="components-region"
+              data-pattern-partial="components-region"
               title="Link to Pattern"
             >Region</a>
           </h4>
@@ -142,14 +142,14 @@
               href="#"
               id="sg-pattern-toggle-annotations-components-region"
               class="sg-pattern-info-toggle sg-pattern-toggle-annotations"
-              data-patternpartial="components-region"
+              data-pattern-partial="components-region"
               title="View Pattern Annotations"
             >&#x1F4C4;</a>
             <a
               href="#"
               id="sg-pattern-toggle-code-components-region"
               class="sg-pattern-info-toggle sg-pattern-toggle-code"
-              data-patternpartial="components-region"
+              data-pattern-partial="components-region"
               title="View Pattern Code"
             >&#x276E;&#x276F;</a>
           </div>
@@ -176,7 +176,7 @@
             <a
               href="../../patterns/03-templates-page/03-templates-page.html"
               class="sg-pattern-link"
-              data-patternpartial="templates-page"
+              data-pattern-partial="templates-page"
               title="Link to Pattern"
             >Page</a>
           </h4>
@@ -185,14 +185,14 @@
               href="#"
               id="sg-pattern-toggle-annotations-templates-page"
               class="sg-pattern-info-toggle sg-pattern-toggle-annotations"
-              data-patternpartial="templates-page"
+              data-pattern-partial="templates-page"
               title="View Pattern Annotations"
             >&#x1F4C4;</a>
             <a
               href="#"
               id="sg-pattern-toggle-code-templates-page"
               class="sg-pattern-info-toggle sg-pattern-toggle-code"
-              data-patternpartial="templates-page"
+              data-pattern-partial="templates-page"
               title="View Pattern Code"
             >&#x276E;&#x276F;</a>
           </div>
@@ -219,7 +219,7 @@
             <a
               href="../../patterns/04-pages-00-homepage/04-pages-00-homepage.html"
               class="sg-pattern-link"
-              data-patternpartial="pages-homepage"
+              data-pattern-partial="pages-homepage"
               title="Link to Pattern"
             >Homepage</a>
           </h4>
@@ -228,14 +228,14 @@
               href="#"
               id="sg-pattern-toggle-annotations-pages-homepage"
               class="sg-pattern-info-toggle sg-pattern-toggle-annotations"
-              data-patternpartial="pages-homepage"
+              data-pattern-partial="pages-homepage"
               title="View Pattern Annotations"
             >&#x1F4C4;</a>
             <a
               href="#"
               id="sg-pattern-toggle-code-pages-homepage"
               class="sg-pattern-info-toggle sg-pattern-toggle-code"
-              data-patternpartial="pages-homepage"
+              data-pattern-partial="pages-homepage"
               title="View Pattern Code"
             >&#x276E;&#x276F;</a>
           </div>
