--- a/patterns/00-elements/index.html
+++ b/patterns/00-elements/index.html
@@ -47,7 +47,7 @@
             <a
               href="../../patterns/00-elements-paragraph/00-elements-paragraph.html"
               class="sg-pattern-link"
-              data-patternpartial="elements-paragraph"
+              data-pattern-partial="elements-paragraph"
               title="Link to Pattern"
             >Paragraph</a>
           </h4>
@@ -56,14 +56,14 @@
               href="#"
               id="sg-pattern-toggle-annotations-elements-paragraph"
               class="sg-pattern-info-toggle sg-pattern-toggle-annotations"
-              data-patternpartial="elements-paragraph"
+              data-pattern-partial="elements-paragraph"
               title="View Pattern Annotations"
             >&#x1F4C4;</a>
             <a
               href="#"
               id="sg-pattern-toggle-code-elements-paragraph"
               class="sg-pattern-info-toggle sg-pattern-toggle-code"
-              data-patternpartial="elements-paragraph"
+              data-pattern-partial="elements-paragraph"
               title="View Pattern Code"
             >&#x276E;&#x276F;</a>
           </div>
