--- a/patterns/03-templates/index.html
+++ b/patterns/03-templates/index.html
@@ -47,7 +47,7 @@
             <a
               href="../../patterns/03-templates-page/03-templates-page.html"
               class="sg-pattern-link"
-              data-patternpartial="templates-page"
+              data-pattern-partial="templates-page"
               title="Link to Pattern"
             >Page</a>
           </h4>
@@ -56,14 +56,14 @@
               href="#"
               id="sg-pattern-toggle-annotations-templates-page"
               class="sg-pattern-info-toggle sg-pattern-toggle-annotations"
-              data-patternpartial="templates-page"
+              data-pattern-partial="templates-page"
               title="View Pattern Annotations"
             >&#x1F4C4;</a>
             <a
               href="#"
               id="sg-pattern-toggle-code-templates-page"
               class="sg-pattern-info-toggle sg-pattern-toggle-code"
-              data-patternpartial="templates-page"
+              data-pattern-partial="templates-page"
               title="View Pattern Code"
             >&#x276E;&#x276F;</a>
           </div>
