minor text edit on test fixture

--- a/test/fixtures/index.html
+++ b/test/fixtures/index.html
@@ -195,7 +195,7 @@
       <div></div><div></div><div></div><div></div>
     </div>
     <div id="sg-code-pane-markdown-commit" class="sg-code-pane">
-      <label id="sg-code-label-commit-message" for="sg-code-textarea-commit-message">Please enter a commit message that describes this edit:</label>
+      <label id="sg-code-label-commit-message" for="sg-code-textarea-commit-message">Please enter a Git commit message that describes this edit:</label>
       <textarea id="sg-code-textarea-commit-message" name="commit_message"></textarea>
       <button id="sg-code-btn-markdown-commit" class="sg-code-btn" title="Commit this revision">Commit</button>
       <button id="sg-code-btn-markdown-commit-cancel" class="sg-code-btn" title="Cancel">Cancel</button>
