Squashed commit of the following:
commit 72e70f5239254988864088d339e3c6e8f486092b
Author: electric-el <electric-el@electric-eloquence.io>
Date:   Thu Jul 14 18:49:33 2022 -0400

    passing e2e tests

commit ecd7a9b2dea5f51f87dfe90e40a21b17a58b28a9
Author: electric-el <electric-el@electric-eloquence.io>
Date:   Thu Jul 14 17:52:42 2022 -0400

    passing unit tests

commit eb31cbe60e23ffddbed64276e0f5fd2e8117fd65
Author: electric-el <electric-el@electric-eloquence.io>
Date:   Thu Jul 14 17:03:50 2022 -0400

    passing unit tests

commit f4c4ba2c90071825f46865d45835c93c064b2239
Author: electric-el <electric-el@electric-eloquence.io>
Date:   Thu Jul 14 15:17:55 2022 -0400

    updated test fixtures

commit 7b4e4dbd5f55661031aabb3606d714895b858e44
Author: electric-el <electric-el@electric-eloquence.io>
Date:   Mon Jul 11 15:38:56 2022 -0400

    passing e2e tests

commit 5b6ad3e41f543f5a1fa292ccc45a7a5871f87ee5
Author: electric-el <electric-el@electric-eloquence.io>
Date:   Mon Jul 11 13:40:29 2022 -0400

    fixed typo in comment

commit 4937ab29f96e227ccfc8d4c4dc38eefacff7e7b3
Author: electric-el <electric-el@electric-eloquence.io>
Date:   Mon Jul 11 13:36:19 2022 -0400

    fixes per linter

commit eba5ef35c08ee33d938d241d9f6b11956cac6782
Author: electric-el <electric-el@electric-eloquence.io>
Date:   Mon Jul 11 13:30:35 2022 -0400

    passing e2e tests

commit f03674d213577381eff62e056b1599c94e537ce4
Author: electric-el <electric-el@electric-eloquence.io>
Date:   Mon Jul 11 12:07:49 2022 -0400

    test fixture updates

commit 30899d8af52f2ea0878c11eb372ae5e8809f40c3
Author: electric-el <electric-el@electric-eloquence.io>
Date:   Mon Jul 11 12:01:19 2022 -0400

    removed unnecessary decoding of html entities, made other minor improvements

commit d5a27a31ca8fba31b69b67169bab3aaeaa9732e3
Author: electric-el <electric-el@electric-eloquence.io>
Date:   Mon Jul 11 07:05:03 2022 -0400

    decoding html entities for markdown editor textarea

commit 17412c1393ddbd0ff

--- a/patterns/00-elements-toggler/00-elements-toggler.html
+++ b/patterns/00-elements-toggler/00-elements-toggler.html
@@ -21,13 +21,15 @@
 
 
   <link rel="stylesheet" href="../../_styles/bld/style.css">
+  <script src="../../node_modules/jquery/dist/jquery.min.js"></script>
+  <script src="../../node_modules/redux/dist/redux.min.js"></script>
   <script src="../../_scripts/src/variables.styl" type="text/javascript"></script>
 </head>
 <body class="">
-<p>Fepper Base</p>  
+<p>For placement only</p>  
 <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
 <script type="text/json" id="sg-pattern-data-footer" class="sg-pattern-data">
-  {"lineage":[],"lineageExists":false,"lineageR":[{"lineagePattern":"compounds-block","lineagePath":"patterns/01-compounds-block/01-compounds-block.html","isHidden":false}],"lineageRExists":true,"missingPartials":[],"patternDesc":"","patternExtension":".mustache","patternName":"Paragraph","patternPartial":"elements-paragraph","patternState":"","portReloader":35730,"portServer":3001}
+  {"lineage":[],"lineageExists":false,"lineageR":[{"lineagePattern":"compounds-block","lineagePath":"patterns/01-compounds-block/01-compounds-block.html","isHidden":false}],"lineageRExists":true,"missingPartials":[],"patternDesc":"","patternExtension":".mustache","patternName":"Toggler","patternPartial":"elements-toggler","patternState":"","portReloader":35730,"portServer":3001}
 </script>
 
 <script>
