--- a/patterns/03-templates-page/03-templates-page.markup-only.html
+++ b/patterns/03-templates-page/03-templates-page.markup-only.html
@@ -1,1 +1,1 @@
-<p>Fepper Base</p>  
+<a id="nav" href="../02-components-region/02-components-region.html"><p>For placement only</p></a>  <p>For placement only</p>    
