--- a/patterns/04-pages-00-homepage/04-pages-00-homepage.html
+++ b/patterns/04-pages-00-homepage/04-pages-00-homepage.html
@@ -21,10 +21,15 @@
 
 
   <link rel="stylesheet" href="../../_styles/bld/style.css">
+  <script src="../../node_modules/jquery/dist/jquery.min.js"></script>
+  <script src="../../node_modules/redux/dist/redux.min.js"></script>
   <script src="../../_scripts/src/variables.styl" type="text/javascript"></script>
 </head>
 <body class="">
-<a href="../../patterns/02-components-region/02-components-region.html">Component</a>  <p>Fepper Base</p>  
+<a id="nav" href="../02-components-region/02-components-region.html"><p><em>Component</em></p>
+</a>  <p><button id="toggler">Toggler</button></p>
+    <script src="../../_scripts/src/requerio-app.js" type="module"></script>
+
 <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
 <script type="text/json" id="sg-pattern-data-footer" class="sg-pattern-data">
   {"lineage":[{"lineagePattern":"templates-page","lineagePath":"patterns/03-templates-page/03-templates-page.html","isHidden":false}],"lineageExists":true,"lineageR":[],"lineageRExists":false,"missingPartials":[],"patternDesc":"","patternExtension":".mustache","patternName":"Homepage","patternPartial":"pages-homepage","patternState":"","portReloader":35730,"portServer":3001}
