--- a/patterns/98-scrape-00-html-scraper/98-scrape-00-html-scraper.html
+++ b/patterns/98-scrape-00-html-scraper/98-scrape-00-html-scraper.html
@@ -21,6 +21,8 @@
 
 
   <link rel="stylesheet" href="../../_styles/bld/style.css">
+  <script src="../../node_modules/jquery/dist/jquery.min.js"></script>
+  <script src="../../node_modules/redux/dist/redux.min.js"></script>
   <script src="../../_scripts/src/variables.styl" type="text/javascript"></script>
 </head>
 <body class="">
