--- a/patterns/01-compounds/index.html
+++ b/patterns/01-compounds/index.html
@@ -21,12 +21,14 @@
 
 
   <link rel="stylesheet" href="../../_styles/bld/style.css">
+  <script src="../../node_modules/jquery/dist/jquery.min.js"></script>
+  <script src="../../node_modules/redux/dist/redux.min.js"></script>
   <script src="../../_scripts/src/variables.styl" type="text/javascript"></script>
 </head>
 <body class="">
 <!-- View All -->
 <link rel="stylesheet" href="../../_styles/pattern-scaffolding.css">
-<div class="sg-main" role="main">
+<main class="sg-main">
 
   <!-- Patterns -->
   <div id="sg-patterns">
@@ -70,13 +72,13 @@
         </div>
         <div class="sg-pattern-example"></div>
         <script type="text/json" id="sg-pattern-data-compounds-block" class="sg-pattern-data">
-          {"lineage":[{"lineagePattern":"elements-paragraph","lineagePath":"patterns/00-elements-paragraph/00-elements-paragraph.html","isHidden":false}],"lineageExists":true,"lineageR":[{"lineagePattern":"components-region","lineagePath":"patterns/02-components-region/02-components-region.html","isHidden":false}],"lineageRExists":true,"missingPartials":["organisms-molecules","molecules-atoms"],"patternDesc":"","patternExtension":".mustache","patternName":"Block","patternPartial":"compounds-block","patternState":"","portReloader":35730,"portServer":3001}
+          {"lineage":[{"lineagePattern":"elements-toggler","lineagePath":"patterns/00-elements-toggler/00-elements-toggler.html","isHidden":false}],"lineageExists":true,"lineageR":[{"lineagePattern":"components-region","lineagePath":"patterns/02-components-region/02-components-region.html","isHidden":false}],"lineageRExists":true,"missingPartials":[],"patternDesc":"","patternExtension":".mustache","patternName":"Block","patternPartial":"compounds-block","patternState":"","portReloader":35730,"portServer":3001}
         </script>
       </div><!--end .sg-pattern-->
     
   </div> <!--end #sg-patterns-->
 
-</div><!--end .sg-main-->
+</main><!--end .sg-main-->
 
 <script>
   // Hydrate viewalls.
