--- a/patterns/03-templates-page/03-templates-page.html
+++ b/patterns/03-templates-page/03-templates-page.html
@@ -21,10 +21,12 @@
 
 
   <link rel="stylesheet" href="../../_styles/bld/style.css">
+  <script src="../../node_modules/jquery/dist/jquery.min.js"></script>
+  <script src="../../node_modules/redux/dist/redux.min.js"></script>
   <script src="../../_scripts/src/variables.styl" type="text/javascript"></script>
 </head>
 <body class="">
-<p>Fepper Base</p>  
+<a id="nav" href="../02-components-region/02-components-region.html"><p>For placement only</p></a>  <p>For placement only</p>    
 <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
 <script type="text/json" id="sg-pattern-data-footer" class="sg-pattern-data">
   {"lineage":[{"lineagePattern":"components-region","lineagePath":"patterns/02-components-region/02-components-region.html","isHidden":false}],"lineageExists":true,"lineageR":[{"lineagePattern":"pages-homepage","lineagePath":"patterns/04-pages-00-homepage/04-pages-00-homepage.html","isHidden":false}],"lineageRExists":true,"missingPartials":[],"patternDesc":"","patternExtension":".mustache","patternName":"Page","patternPartial":"templates-page","patternState":"","portReloader":35730,"portServer":3001}
