--- a/patterns/04-pages-00-homepage/04-pages-00-homepage.markup-only.html
+++ b/patterns/04-pages-00-homepage/04-pages-00-homepage.markup-only.html
@@ -1,1 +1,3 @@
-<a href="../../patterns/02-components-region/02-components-region.html">Component</a>  <p>Fepper Base</p>  
+<a id="nav" href="../02-components-region/02-components-region.html"><p><em>Component</em></p>
+</a>  <p><button id="toggler">Toggler</button></p>
+    <script src="../../_scripts/src/requerio-app.js" type="module"></script>
