--- a/patterns/04-pages/index.html
+++ b/patterns/04-pages/index.html
@@ -21,12 +21,14 @@
 
 
   <link rel="stylesheet" href="../../_styles/bld/style.css">
+  <script src="../../node_modules/jquery/dist/jquery.min.js"></script>
+  <script src="../../node_modules/redux/dist/redux.min.js"></script>
   <script src="../../_scripts/src/variables.styl" type="text/javascript"></script>
 </head>
 <body class="">
 <!-- View All -->
 <link rel="stylesheet" href="../../_styles/pattern-scaffolding.css">
-<div class="sg-main" role="main">
+<main class="sg-main">
 
   <!-- Patterns -->
   <div id="sg-patterns">
@@ -76,7 +78,7 @@
     
   </div> <!--end #sg-patterns-->
 
-</div><!--end .sg-main-->
+</main><!--end .sg-main-->
 
 <script>
   // Hydrate viewalls.
