minor text fixture update

--- a/patterns/04-pages-00-homepage/04-pages-00-homepage.html
+++ b/patterns/04-pages-00-homepage/04-pages-00-homepage.html
@@ -27,7 +27,7 @@
 </head>
 <body class="">
 <a id="nav" href="../02-components-region/02-components-region.html"><p><em>Component</em></p>
-</a>  <p><button id="toggler">Toggler</button></p>
+</a>  <p><button id="toggler">Toggle</button></p>
     
 <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
 <script type="text/json" id="sg-pattern-data-footer" class="sg-pattern-data">
