--- a/patterns/04-pages-00-homepage/04-pages-00-homepage.markup-only.html
+++ b/patterns/04-pages-00-homepage/04-pages-00-homepage.markup-only.html
@@ -1,3 +1,3 @@
 <a id="nav" href="../02-components-region/02-components-region.html"><p><em>Component</em></p>
-</a>  <p><button id="toggler">Toggler</button></p>
+</a>  <p><button id="toggler">Toggle</button></p>
     
