updated test fixture

--- a/test/fixtures/index.html
+++ b/test/fixtures/index.html
@@ -93,7 +93,7 @@
   <ul class="sg-acc-panel sg-right sg-checklist" id="sg-view">
     {{^ ishControlsHide.views-annotations }}<li><a href="#" class="sg-checklist-icon sg-icon sg-icon-radio" id="sg-t-annotations">Annotations</a></li>{{/ ishControlsHide.views-annotations }}
     {{^ ishControlsHide.views-code }}<li><a href="#" class="sg-checklist-icon sg-icon sg-icon-radio" id="sg-t-code">Code</a></li>{{/ ishControlsHide.views-code }}
-    {{^ ishControlsHide.views-new }}<li><a href="#" target="_blank" id="sg-raw" class="sg-checklist-icon sg-icon sg-icon-link">Open in new window</a></li>{{/ ishControlsHide.views-new }}
+    {{^ ishControlsHide.views-new }}<li><a href="#" target="_blank" id="sg-raw" class="sg-checklist-icon sg-icon sg-icon-link">Open in new tab</a></li>{{/ ishControlsHide.views-new }}
   </ul>
 {{/ ishControlsHide.views-all }}
 </li><li class="sg-tools">
@@ -208,8 +208,11 @@
   <div id="sg-code-panel-requerio" class="sg-code-panel">
     <div id="sg-code-pane-requerio-na" class="sg-code-pane sg-code-pane-na">
       <p>Use the Requerio Inspector to display the real-time JavaScript state of elements in your site!</p>
-      <p>The demo site packaged with <a href='https://github.com/electric-eloquence/fepper' target='_blank'>Fepper's main distro</a> serves as documentation for setup and use.</p>
-      <p>You can also view this documentation on <a href='' target='_blank'>Fepper's website</a>.</p>
+      <p id="sg-code-requerio-demo-link-container" style="display: none;">
+        <a id="sg-code-requerio-demo-link"><a href='/?p=pages-requerio-inspector-basics'>Click here to view the demo.</a></a>
+      </p>
+      <p id="sg-code-main-distro-link-container" style="display: none;">The demo site packaged with <a href='https://github.com/electric-eloquence/fepper/releases' target='_blank'>Fepper's main distro</a> serves as documentation for setup and use.</p>
+      <p>You can also view documentation on <a href='https://fepper.io/docpage--requerio-inspector.html' target='_blank'>Fepper's website</a>.</p>
     </div>
     <div id="sg-code-pane-requerio" class="sg-code-pane">
       <ul id="sg-code-tree-requerio-help" class="sg-code-tree-requerio">
@@ -227,9 +230,11 @@
             <li class="sg-code-tree-requerio sg-code-tree-requerio-node sg-code-tree-requerio-leaf"
 >requerio.$orgs['#nav'].dispatchAction('css', {backgroundColor: 'green'})</li>
             <li class="sg-code-tree-requerio sg-code-tree-requerio-node sg-code-tree-requerio-leaf"
->If not on the default demo site, or if the #nav element doesn't exist, replace '#nav' with your own selector, and the arguments with your own arguments.</li>
+>The state change should be immediately visible.</li>
             <li class="sg-code-tree-requerio sg-code-tree-requerio-node sg-code-tree-requerio-leaf"
->The state change should show up below.</li>
+>If the nav is hidden because the viewport is too narrow, either widen the viewport, or click the sidebar toggle to show the nav.</li>
+            <li class="sg-code-tree-requerio sg-code-tree-requerio-node sg-code-tree-requerio-leaf"
+>If not on the default demo site, or if the #nav element doesn't exist, replace '#nav' with your own selector, and the arguments with your own arguments.</li>
             <li class="sg-code-tree-requerio sg-code-tree-requerio-node sg-code-tree-requerio-leaf"
 ><a href="https://github.com/electric-eloquence/requerio#readme" target="_blank">Main Requerio docs.</a></li>
             <li class="sg-code-tree-requerio sg-code-tree-requerio-node sg-code-tree-requerio-leaf"
